[tool.poetry]
name = "audio-preprocessor"
version = "0.1.0"
description = ""
authors = ["tuki9ko <arkmisha@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.12"
numpy = "^1.21.2"
librosa = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
